[metadata]
name = singlecell
description = A command-line utility for manipulating h5ad files containing single cell data
author = Phillip Dexheimer
author_email = phillip.dexheimer@cchmc.org
url = https://github.com/pdexheimer/single_cell_util
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
scripts = singlecell.py
install_requires =
    scanpy > 1.4.0
    python-Levenshtein
setup_requires =
    setuptools_scm
python_requires = >=3.6