[metadata]
name = scuttle
description = A command-line utility for manipulating h5ad files containing single cell data
author = Phillip Dexheimer
author_email = phillip.dexheimer@cchmc.org
license = GPLv3
url = https://github.com/pdexheimer/scuttle
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    
[options]
packages = find:
install_requires =
    scanpy > 1.4.0
    python-Levenshtein
    loompy
setup_requires =
    setuptools_scm
python_requires = >=3.6

[options.entry_points]
console_scripts =
    scuttle=singlecell:main