[metadata]
name = scuttle
description = A command-line utility for manipulating h5ad files containing single cell data
author = Phillip Dexheimer
author_email = phillip.dexheimer@cchmc.org
license = GPLv3
url = https://github.com/pdexheimer/scuttle
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    
[options]
packages = find:
install_requires =
    scanpy > 1.4.0
    python-Levenshtein
    loompy
    rpy2
    tzlocal # Unspecified dependency of rpy2.robjects.pandas2ri
    colorama
setup_requires =
    isort
    setuptools_scm
python_requires = >=3.6

[options.entry_points]
console_scripts =
    scuttle=scuttle.scuttle:main

[flake8]
exclude = build,env,.eggs
max-line-length = 120
#E701: Multiple statements on one line
per-file-ignores = scuttle/commands/describe.py:E701
ignore = 
    E121,
    E123,
    E126,
    E226,
    E24,
    E704,
    W503,
    W504
select = 
    C,
    E,
    F,
    W,
    B,
    Q,
    B902

[isort]
line_length = 120
balanced_wrapping = True
skip_glob = env/**
